--- a/css/userInfo.css
+++ b/css/userInfo.css
@@ -274,6 +274,7 @@ html,body{
 .user-info-text-tittle label{
 	font-weight: 400;
 }
-/* GPS */
-
-/* power */
+/*
+*/
+.text-capitalize{
+margin-right: 10px;}
