--- a/view/userInfo/userInfo.html
+++ b/view/userInfo/userInfo.html
@@ -4,7 +4,7 @@
 			<img src="./images/userObject.png" alt="..." class="img-circle">
 		</a>
 		<div class="media-body">
-			<p><strong class="text-capitalize">cole mohr</strong> <i class="sex-icon sex-icon-male"></i></p>
+			<p><strong class="text-capitalize">cole mohr</strong></i><i class="fa fa-male fa-lg"></i><i class="fa fa-female"></i><!-- fa-male男 fa-female女  --></p>
 			<p>手机号:<span>13666668888</span></p>
 		</div>
 	</div>
